<resources>
    <string name="app_name">Calculator App</string>
    <string name="displays_calculator_output">Displays calculator output</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multSign">*</string>
    <string name="addSign">+</string>
    <string name="minSign">-</string>
    <string name="divSign">\u00F7</string>
    <string name="sqrtSign">srqt</string>
    <string name="deciPoint">.</string>
    <string name="equalSign">=</string>
    <string name="clear">Clear</string>
</resources>