<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/layoutDisplayButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextNumberDisplay"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:autoText="false"
            android:ems="10"
            android:gravity="bottom"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:text="@string/_0"
            android:textAlignment="viewEnd"
            android:textColor="#43A047"
            android:textSize="60sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn1"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/_1" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/_2" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/_3" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/addSign" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:text="@string/multSign" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn15"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/_4" />

            <Button
                android:id="@+id/btn14"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/_5" />

            <Button
                android:id="@+id/btn13"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/_6" />

            <Button
                android:id="@+id/btn12"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/minSign" />

            <Button
                android:id="@+id/btn11"
                android:layout_width="73dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/divSign" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn"
                android:layout_width="21dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/_7" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="22dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/_8" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="21dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/_9" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="101dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/sqrtSign" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn7"
                android:layout_width="155dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/_0" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="76dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/deciPoint" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="155dp"
                android:layout_height="77dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/equalSign" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>